cluster/argocd/sources/minio/minio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: minio-volume
        persistentVolumeClaim:
          claimName: nfs-minio 
      - name: minio-certificates
        secret:
          secretName: minio-secret
          items:
          - key: AWS_CERT
            path: public.crt
          - key: AWS_CERT_KEY
            path: private.key
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command: ["sh", "-c", "mkdir -p /storage/backupbucket && mkdir -p /root/.minio/certs && ln -s /root/certs/private.key /root/.minio/certs/private.key && ln -s /root/certs/public.crt /root/.minio/certs/public.crt && exec minio server /storage"]
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: minio-volume
          mountPath: "/storage"
        - name: minio-certificates
          mountPath: "/root/certs"
          readOnly: true
        resources:
          limits:
            cpu: 500m
            memory: 800Mi
          requests:
            cpu: 500m
            memory: 800Mi          
---

apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  selector:
    app: minio
  type: ClusterIP  
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP  
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:        
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: minio-ingress
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: minio.binesty.corp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
---
